test/variable/use_null_as_var.lox
// error: expect variable name
var null = "value"
